--- a/Arbitrage-Lab/txt_Appendix.tex
+++ b/Arbitrage-Lab/txt_Appendix.tex
@@ -7,9 +7,9 @@
 %----------------------------------------------------
 
 %----------------------------------------------------
-\input{txt_A_algorithms.tex}
+\input{txt_A_copula_algorithms.tex}
 %----------------------------------------------------
 
 %----------------------------------------------------
-\input{txt_A_copula_sampling.tex}
+\input{txt_A_algorithms.tex}
 %----------------------------------------------------
