--- a/Arbitrage-Lab/txt_A_copula_algorithms.tex
+++ b/Arbitrage-Lab/txt_A_copula_algorithms.tex
@@ -351,7 +351,7 @@ $\displaystyle K_C(w;\hat \theta) = t - \frac{\varphi(w;\hat \theta)}{\varphi'(w
 \end{algorithmic}
 \end{algorithm}
 %----------------------------------------------------
-From Theorem 4.3.7 in \cite{Nelsen2006} (p.129), it can be shown that \cref{alg:sampling_theorem_nelsen} generates random variates $(u,v)$ whose joint distribution function is an Archimedean copula $C$ with generator $\varphi$: %in $\Omega$:
+From Theorem 4.3.7 in \cite{Nelsen2006} (p.129), it can be shown that \cref{alg:sampling_theorem_nelsen} generates random variates $(u,v)$ whose joint distribution function is an Archimedean copula $C$ with generator $\varphi$. %in $\Omega$:
 Note that $K_C$ is given by Theorem 4.3.4. (p.127) and it denotes the $C$-measure of the set $\{(u,v)\in [0,1]^2 \mid C(u,v)\leq w\}$
 $$
 K_C(w; \theta) := t - \frac{\varphi(w; \theta)}{\varphi'(w^+; \theta)},
