--- a/Arbitrage-Lab/bib_references_DOI.bib
+++ b/Arbitrage-Lab/bib_references_DOI.bib
@@ -591,3 +591,22 @@
   url = {http://dx.doi.org/10.1007/0-387-28678-0},
   DOI = {10.1007/0-387-28678-0}
 }
+
+
+
+@InProceedings{Marti2016,
+  title = 	 {Exploring and measuring non-linear correlations: Copulas, Lightspeed Transportation and Clustering},
+  author = 	 {Marti, Gautier and Andler, Sébastien and Nielsen, Frank and Donnat, Philippe},
+  booktitle = 	 {Proceedings of the Time Series Workshop at NIPS 2016},
+  pages = 	 {59--69},
+  year = 	 {2016},
+  editor = 	 {Anava, Oren and Khaleghi, Azadeh and Cuturi, Marco and Kuznetsov, Vitaly and Rakhlin, Alexander},
+  volume = 	 {55},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Barcelona, Spain},
+  month = 	 {09 Dec},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v55/marti16.pdf},
+  url = 	 {https://proceedings.mlr.press/v55/marti16.html},
+  doi = {10.48550/ARXIV.1610.09659},
+}
